# solara

./: .gitattributes  CMakeLists.txt  README.md
.claude/: settings.local.json
.github/workflows/: build-release.yml  solara-release.yml
Presets/Bells/: CandyChime.slr  CrystalBell.slr  DreamingBox.slr  FrozenPeak.slr  Glockensong.slr  MelodyBox.slr  Proteus2Bell.slr  SawtoothBell.slr  SilverBell.slr  ThawingPeak.slr  TubularDawn.slr  TubyTuesday.slr  TwinkleBox.slr  WatchBell.slr  WindChime.slr
Presets/Brass/: BoneSolo.slr  BrassEnsemble.slr  BrassFall.slr  CrossSection.slr  DeepTuba.slr  EnglishHorn.slr  FlugelHorn.slr  FullBrass.slr  GloriousFall.slr  GrandeTuba.slr  HarmonMute.slr  HornChops.slr  MutedTrumpet.slr  PopAttack.slr  SoftTrombone.slr  SoloTrombone.slr  SoloTrumpet.slr  StaccatoPop.slr  StackedPop.slr  TrumpetLangtons.slr
Presets/Flute/: AndesMood.slr  AttackFlute.slr  ChiffedToot.slr  FairyBreath.slr  FullFlute.slr  HopFlute.slr  MountainPipe.slr  PanPipes.slr  PiccoloSong.slr
Presets/Guitar/: DistortedMute.slr  JCBody.slr  JazzBox.slr  KindaKurt.slr  LoudGrind.slr  MutedPick.slr  NylonString.slr  OctaveNice.slr  PowerChord.slr  PunkRiff.slr  Scratchee.slr  SoftNylon.slr  StratClean.slr  StratSequence.slr  TouchDrive.slr  TwelveString.slr  WahRiff.slr
Presets/Hits/: BlastFromPast.slr  BlueIce.slr  BrassDitto.slr  CaveEcho.slr  CheezyMovie.slr  (+19 more)
plugins/Solara/: CMakeLists.txt  status.json
plugins/Solara/.ideas/: architecture.md  creative-brief.md  parameter-spec.md  plan.md
plugins/Solara/Design/: v1-style-guide.md  v1-ui-spec.md
plugins/Solara/Documentation/: USER_MANUAL.md
plugins/Solara/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  VisageControls.h
plugins/Solara/Source/Engine/: AmpEnvelope.h  LFOEngine.h  MultimodeFilter.h  SolaraSynth.cpp  SolaraSynth.h  SolaraVoice.cpp  SolaraVoice.h
plugins/Solara/Source/Presets/: PresetDatabase.cpp  PresetDatabase.h  SolaraSettings.h
plugins/Solara/Source/SLR/: SLRParser.cpp  SLRParser.h  SLRSpec.h  SampleCache.cpp  SampleCache.h
scripts/: build-slr-convert.ps1
(+53 files in other folders)
